build/log/idf_py_stdout_output_60700
[1/17] Linking C static library esp-idf/espressif__qrcode/libespressif__qrcode.a
[2/17] Linking C static library esp-idf/spiffs/libspiffs.a
[3/17] Linking C static library esp-idf/wifi_provisioning/libwifi_provisioning.a
[4/17] Linking C static library esp-idf/wifi_driver/libwifi_driver.a
[5/17] Linking C static library esp-idf/mqtt_driver/libmqtt_driver.a
[6/17] Building C object esp-idf/led_driver/CMakeFiles/__idf_led_driver.dir/led_driver.c.obj
FAILED: esp-idf/led_driver/CMakeFiles/__idf_led_driver.dir/led_driver.c.obj 
/home/r_and_tung/.espressif/tools/riscv32-esp-elf/esp-12.2.0_20230208/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/r_and_tung/esp32cam-face-regconition/build/config -I/home/r_and_tung/esp32cam-face-regconition/components/led_driver -I/home/r_and_tung/esp/esp-idf/components/newlib/platform_include -I/home/r_and_tung/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/r_and_tung/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/r_and_tung/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/r_and_tung/esp/esp-idf/components/freertos/esp_additions/include -I/home/r_and_tung/esp/esp-idf/components/freertos/esp_additions/arch/riscv/include -I/home/r_and_tung/esp/esp-idf/components/esp_hw_support/include -I/home/r_and_tung/esp/esp-idf/components/esp_hw_support/include/soc -I/home/r_and_tung/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/r_and_tung/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/r_and_tung/esp/esp-idf/components/esp_hw_support/port/esp32c3/private_include -I/home/r_and_tung/esp/esp-idf/components/heap/include -I/home/r_and_tung/esp/esp-idf/components/log/include -I/home/r_and_tung/esp/esp-idf/components/soc/include -I/home/r_and_tung/esp/esp-idf/components/soc/esp32c3 -I/home/r_and_tung/esp/esp-idf/components/soc/esp32c3/include -I/home/r_and_tung/esp/esp-idf/components/hal/esp32c3/include -I/home/r_and_tung/esp/esp-idf/components/hal/include -I/home/r_and_tung/esp/esp-idf/components/hal/platform_port/include -I/home/r_and_tung/esp/esp-idf/components/esp_rom/include -I/home/r_and_tung/esp/esp-idf/components/esp_rom/include/esp32c3 -I/home/r_and_tung/esp/esp-idf/components/esp_rom/esp32c3 -I/home/r_and_tung/esp/esp-idf/components/esp_common/include -I/home/r_and_tung/esp/esp-idf/components/esp_system/include -I/home/r_and_tung/esp/esp-idf/components/esp_system/port/soc -I/home/r_and_tung/esp/esp-idf/components/esp_system/port/include/riscv -I/home/r_and_tung/esp/esp-idf/components/esp_system/port/include/private -I/home/r_and_tung/esp/esp-idf/components/riscv/include -I/home/r_and_tung/esp/esp-idf/components/lwip/include -I/home/r_and_tung/esp/esp-idf/components/lwip/include/apps -I/home/r_and_tung/esp/esp-idf/components/lwip/include/apps/sntp -I/home/r_and_tung/esp/esp-idf/components/lwip/lwip/src/include -I/home/r_and_tung/esp/esp-idf/components/lwip/port/include -I/home/r_and_tung/esp/esp-idf/components/lwip/port/freertos/include -I/home/r_and_tung/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/r_and_tung/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/r_and_tung/esp32cam-face-regconition/components/mqtt_driver -I/home/r_and_tung/esp/esp-idf/components/nvs_flash/include -I/home/r_and_tung/esp/esp-idf/components/spi_flash/include -I/home/r_and_tung/esp/esp-idf/components/esp_partition/include -I/home/r_and_tung/esp32cam-face-regconition/components/wifi_driver -I/home/r_and_tung/esp/esp-idf/components/esp_wifi/include -I/home/r_and_tung/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/r_and_tung/esp/esp-idf/components/esp_event/include -I/home/r_and_tung/esp/esp-idf/components/esp_phy/include -I/home/r_and_tung/esp/esp-idf/components/esp_phy/esp32c3/include -I/home/r_and_tung/esp/esp-idf/components/esp_netif/include -I/home/r_and_tung/esp/esp-idf/components/wifi_provisioning/include -I/home/r_and_tung/esp/esp-idf/components/protocomm/include/common -I/home/r_and_tung/esp/esp-idf/components/protocomm/include/security -I/home/r_and_tung/esp/esp-idf/components/protocomm/include/transports -I/home/r_and_tung/esp/esp-idf/components/esp_timer/include -I/home/r_and_tung/esp32cam-face-regconition/managed_components/espressif__qrcode/include -I/home/r_and_tung/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/r_and_tung/esp/esp-idf/components/tcp_transport/include -I/home/r_and_tung/esp/esp-idf/components/esp-tls -I/home/r_and_tung/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/r_and_tung/esp/esp-idf/components/mbedtls/port/include -I/home/r_and_tung/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/r_and_tung/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/r_and_tung/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/r_and_tung/esp/esp-idf/components/json/cJSON -I/home/r_and_tung/esp/esp-idf/components/driver/include -I/home/r_and_tung/esp/esp-idf/components/driver/deprecated -I/home/r_and_tung/esp/esp-idf/components/driver/analog_comparator/include -I/home/r_and_tung/esp/esp-idf/components/driver/dac/include -I/home/r_and_tung/esp/esp-idf/components/driver/gpio/include -I/home/r_and_tung/esp/esp-idf/components/driver/gptimer/include -I/home/r_and_tung/esp/esp-idf/components/driver/i2c/include -I/home/r_and_tung/esp/esp-idf/components/driver/i2s/include -I/home/r_and_tung/esp/esp-idf/components/driver/ledc/include -I/home/r_and_tung/esp/esp-idf/components/driver/mcpwm/include -I/home/r_and_tung/esp/esp-idf/components/driver/parlio/include -I/home/r_and_tung/esp/esp-idf/components/driver/pcnt/include -I/home/r_and_tung/esp/esp-idf/components/driver/rmt/include -I/home/r_and_tung/esp/esp-idf/components/driver/sdio_slave/include -I/home/r_and_tung/esp/esp-idf/components/driver/sdmmc/include -I/home/r_and_tung/esp/esp-idf/components/driver/sigma_delta/include -I/home/r_and_tung/esp/esp-idf/components/driver/spi/include -I/home/r_and_tung/esp/esp-idf/components/driver/temperature_sensor/include -I/home/r_and_tung/esp/esp-idf/components/driver/touch_sensor/include -I/home/r_and_tung/esp/esp-idf/components/driver/twai/include -I/home/r_and_tung/esp/esp-idf/components/driver/uart/include -I/home/r_and_tung/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/r_and_tung/esp/esp-idf/components/esp_pm/include -I/home/r_and_tung/esp/esp-idf/components/esp_ringbuf/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=/home/r_and_tung/esp32cam-face-regconition=. -fmacro-prefix-map=/home/r_and_tung/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/led_driver/CMakeFiles/__idf_led_driver.dir/led_driver.c.obj -MF esp-idf/led_driver/CMakeFiles/__idf_led_driver.dir/led_driver.c.obj.d -o esp-idf/led_driver/CMakeFiles/__idf_led_driver.dir/led_driver.c.obj -c /home/r_and_tung/esp32cam-face-regconition/components/led_driver/led_driver.c
/home/r_and_tung/esp32cam-face-regconition/components/led_driver/led_driver.c: In function 'led_mqtt_callback':
/home/r_and_tung/esp32cam-face-regconition/components/led_driver/led_driver.c:39:14: error: expected ')' before 'data'
   39 |     if ((int(data[0]) - 40) == 1) { // lỗi đoạn này
      |              ^~~~
      |              )
/home/r_and_tung/esp32cam-face-regconition/components/led_driver/led_driver.c:39:22: error: expected ')' before '-' token
   39 |     if ((int(data[0]) - 40) == 1) { // lỗi đoạn này
      |         ~            ^~
      |                      )
[7/17] Performing build step for 'bootloader'
[1/1] cd /home/r_and_tung/esp32cam-face-regconition/build/bootloader/esp-idf/esptool_py && /home/r_and_tung/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/r_and_tung/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/r_and_tung/esp32cam-face-regconition/build/bootloader/bootloader.bin
Bootloader binary size 0x5030 bytes. 0x2fd0 bytes (37%) free.
ninja: build stopped: subcommand failed.
